--- a/Game_project/Game_project.vcxproj.filters
+++ b/Game_project/Game_project.vcxproj.filters
@@ -28,7 +28,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\..\Questions.txt">
+    <Text Include="Questions.txt">
       <Filter>Исходные файлы</Filter>
     </Text>
   </ItemGroup>
